# sales-revenue-prediction

./: .dockerignore  .flake8  .gitignore  README.md  pyproject.toml  render.yaml  run_api.py  run_app.py
api/: __init__.py
api/application/: __init__.py  dtos.py  protocols.py  use_cases.py
api/domain/: __init__.py  sales_prediction.py
api/infrastructure/: __init__.py
api/infrastructure/api/: __init__.py  main.py  routes.py
api/infrastructure/ml/: __init__.py  model_repository.py  protocols.py
app/: __init__.py  streamlit_app.py
core/: __init__.py  evaluation.py  persistence.py  preprocessing.py
data/: sales_dataset.csv
docker/: api.Dockerfile  app.Dockerfile
notebooks/: analysis.ipynb
saved_models/: model_metadata.joblib  polynomial_transformer.joblib  revenue_model.joblib
tests/integration/: test_api.py
tests/unit/: test_entities.py  test_preprocessing.py  test_use_cases.py
